--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -30,7 +31,6 @@
     "nanoid": "^3.3.11",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7",
     "winston": "^3.18.3"
   },
   "devDependencies": {
