--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
     "build": "cd client && npm run build",
     "start": "cd server && npm start",
-    "vercel-build": "cd server && npm install && cd ../client && npm install && npm run build"
+    "vercel-build": "cd client && npm install && npm run build"
   },
   "keywords": [
     "construction",
@@ -18,6 +18,20 @@
   ],
   "author": "JAKUP Team",
   "license": "MIT",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "nanoid": "^3.3.11",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "winston": "^3.18.3"
+  },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
