--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "client/build",
-  "installCommand": "cd server && npm install && cd ../client && npm install",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/api/:path*",
