--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "cd server && npm install && cd ../client && npm install && npm run build",
   "outputDirectory": "client/build",
   "installCommand": "npm install",
+  "functions": {
+    "api/index.js": {
+      "includeFiles": "server/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/:path*",
